添加底座安装尺寸图片

--- a/2-ProductFeature/2.3-MechanicalStructureParameter.md
+++ b/2-ProductFeature/2.3-MechanicalStructureParameter.md
@@ -6,8 +6,9 @@
    选择机器人安装位置时，重要的是要考虑机器人正上方和正下方的圆柱空间，并尽可能避免将工具移向圆柱空间。 因为这会导致工具运动缓慢时关节旋转过快，导致机器人效率低下且风险评估困难。
             
 ## 2 底座安装尺寸
-
-
+<center>
+<img src="../resources/2-ProductFeature/base-mounting.jpg" width="450" height="auto" />
+</center>
 
 ## 3 双臂端法兰尺寸
 <center>
