添加底座安装尺寸图片

--- a/2-ProductFeature/2.3-MechanicalStructureParameter.md
+++ b/2-ProductFeature/2.3-MechanicalStructureParameter.md
@@ -6,7 +6,9 @@
   When choosing a robot mounting location, it is important to consider the cylindrical space directly above and below the robot, and avoid moving the tool towards the cylindrical space as much as possible. Because this will cause the joint to rotate too fast when the tool movement is slow, resulting in low robot efficiency and difficult risk assessment.
             
 ## 2 Base Mounting Dimensions
-
+<center>
+<img src="../resources/2-ProductFeature/base-mounting.jpg" width="450" height="auto" />
+</center>
 
 
 ## 3 Double Arm End Flange Size
